# ML-Pipeline-Deployment

./: .gitignore  DEPLOY.md  DEPLOYMENT_GUIDE.md  FIX_DISK_SPACE.md  FIX_GH_PAGES_UI.md  GITHUB_PAGES_SETUP.md  MANIFEST.in  PUBLISH.md  QUICK_FIX.md  README.md  README_DEPLOYMENT.md  SETUP_PAGES.md  UI_GUIDE.md  build.sh  pyproject.toml  requirements.txt  run_iot_server.py  run_local.py  run_real_time.py  run_unified_server.py  setup.py
.github/workflows/: ci.yml  deploy-api.yml  deploy-pages-minimal.yml  deploy-pages-simple.yml  deploy-pages.yml  publish.yml
configs/: local_pipeline.yaml  pipeline_config.yaml  real_time_pipeline.yaml
examples/autonomous_vehicle/: __init__.py  vehicle_pipeline.py
examples/customer_churn/: __init__.py  churn_pipeline.py
examples/fraud_detection/: __init__.py  fraud_pipeline.py
examples/medical_image/: __init__.py  medical_pipeline.py
examples/recommendation/: __init__.py  recommendation_pipeline.py
scripts/: fix-api-urls.py  update-html-api-urls.sh
src/: __init__.py  cli.py
src/core/: orchestrator.py  pipeline_builder.py
src/stages/: automl_builder.py  continuous_training.py  data_processor.py  model_serving.py  model_trainer.py  stream_processor.py
src/utils/: data_manager.py  local_deployer.py  logger.py  model_registry.py
ui/: api-config.js  churn.html  fraud.html  index.html  iot_sensors.html  landing.html  medical.html  recommendation.html  unified.html  vehicle.html
