[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-pipeline-deploy"
version = "1.0.0"
description = "Enterprise ML Pipeline Deployment Platform with 5 production-ready examples"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "ML Pipeline Team", email = "your-email@example.com"}
]
keywords = [
    "machine-learning",
    "ml-pipeline",
    "mlops",
    "deployment",
    "fastapi",
    "churn-prediction",
    "fraud-detection",
    "recommendation-system"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "click>=8.1.0",
    "pyyaml>=6.0",
    "mlflow>=2.8.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
full = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "xgboost>=1.7.0",
    "lightgbm>=3.3.0",
    "tensorflow>=2.13.0",
    "pydicom>=2.4.0",
    "Pillow>=10.0.0",
    "yfinance>=0.2.0",
    "schedule>=1.2.0",
    "kafka-python>=2.0.2",
    "websockets>=11.0",
]

[project.urls]
Homepage = "https://github.com/Arvind-55555/ML-Pipeline-Deployment"
Documentation = "https://github.com/Arvind-55555/ML-Pipeline-Deployment#readme"
Repository = "https://github.com/Arvind-55555/ML-Pipeline-Deployment"
Issues = "https://github.com/Arvind-55555/ML-Pipeline-Deployment/issues"

[project.scripts]
ml-pipeline = "src.cli:main"
ml-pipeline-train = "run_local:train"
ml-pipeline-serve = "run_local:serve"
ml-pipeline-deploy = "run_unified_server:main"

[tool.setuptools]
packages = ["src", "examples", "src.core", "src.stages", "src.utils", "src.deployment"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json", "*.html", "*.js", "*.css"]

